asteroids working. working on bullets

--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 </head>
 <body>
   <h1>PROJECT B - Scrollshooter</h1>
-  <div id="main-play-area">
 
-    <img id="player" src="images/Sprites/artPack/Blue/Animation/7.png">
-    <div id="start-button">
-      <h2>START</h2>
-    </div>
-  </div>
-
-  <script type="text/javascript" src="js/player.js"></script>
-  <script type="text/javascript" src="js/enemies.js"></script>
+ 
+<canvas width = "380" height="320"></canvas>
+<script type="text/javascript" src="js/bullets.js"></script>
+<script type="text/javascript" src="js/player.js"></script>
+<script type="text/javascript" src="js/asteroids.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
