--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,17 @@
   <link rel="stylesheet" href="style.css">
   <title>Project B</title>
 </head>
+
 <body>
   <h1>PROJECT B - Scrollshooter</h1>
 
- 
-<canvas width = "380" height="320"></canvas>
-<script type="text/javascript" src="js/bullets.js"></script>
-<script type="text/javascript" src="js/player.js"></script>
-<script type="text/javascript" src="js/asteroids.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+
+  <canvas width="380" height="320"></canvas>
+  <script type="text/javascript" src="js/background.js"></script>
+  <script type="text/javascript" src="js/bullets.js"></script>
+  <script type="text/javascript" src="js/player.js"></script>
+  <script type="text/javascript" src="js/asteroids.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
+
 </html>
