collisions corrected, game over and restart done

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
-  <h1>PROJECT B - Scrollshooter</h1>
+  <h1>PROJECT B </h1>
 
 
   <canvas width="380" height="320"></canvas>
   <script type="text/javascript" src="js/background.js"></script>
-  <script type="text/javascript" src="js/bullets.js"></script>
+  <script type="text/javascript" src="js/bullet.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
-  <script type="text/javascript" src="js/asteroids.js"></script>
+  <script type="text/javascript" src="js/asteroid.js"></script>
+  <script type="text/javascript" src="js/scoreboard.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 
