--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
   
-  <h1>Space Blast </h1>
-  <audio id="background-music"><source src="2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="audio/mpeg" /></audio>
+  <h1>BLASTEROIDS </h1>
+  <audio id="background-music" loop><source src="2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="audio/mpeg" /></audio>
   <audio id="game-over"><source src="256091__soundeffectspodcast-com__game-over-voice-2b.wav" type="audio/wav" /></audio>
   
   <div id="Board">
@@ -37,7 +37,7 @@
  </table>
 </div>
 
-  <canvas width="480" height="320"></canvas>
+  <canvas width="480" height="380"></canvas>
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/bullet.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
