--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/Sprites/artPack/Aestroids/aestroid_brown.png" />
-  <title>Project B</title>
+  <title>Blasteroids</title>
 </head>
 
 <body>
