last minutes changes to visuals and difficulty

--- a/index.html
+++ b/index.html
@@ -33,11 +33,19 @@
     <th id="high-score-3-name"></th>
     <th id="high-score-3-score"></th>
 </tr>
+<tr>
+  <th id="high-score-4-name"></th>
+  <th id="high-score-4-score"></th>
+</tr>
+<tr>
+  <th id="high-score-5-name"></th>
+  <th id="high-score-5-score"></th>
+</tr>
 
  </table>
 </div>
 
-  <canvas width="480" height="380"></canvas>
+  <canvas width="800" height="640"></canvas>
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/bullet.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
