--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 <body>
   
   <h1>BLASTEROIDS </h1>
-  <audio id="background-music" loop><source src="2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="audio/mpeg" /></audio>
+  <!-- <audio id="background-music" loop><source src="2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="audio/mpeg" /></audio> -->
   <audio id="game-over"><source src="256091__soundeffectspodcast-com__game-over-voice-2b.wav" type="audio/wav" /></audio>
-  
+  <!-- <audio id="game-over"><source src="MP3/eagleeye.mp3" type="audio/wav" /></audio>
+  <audio id="game-over"><source src="MP3/impressive.mp3" type="audio/wav" /></audio>
+  <audio id="game-over"><source src="MP3/unreal.mp3" type="audio/wav" /></audio>
+  <audio id="game-over"><source src="MP3/rocketscientist.mp3" type="audio/wav" /></audio>
+  <audio id="game-over"><source src="MP3/unstoppable.mp3" type="audio/wav" /></audio>
+  <audio id="game-over"><source src="MP3/godlike.mp3" type="audio/wav" /></audio> -->
   <div id="Board">
-  <h2 id= "scoreboard">Score </h2>
+  <h2 id= "scoreboard">Score : 00 </h2>
 
   <h3 id="score">Highscores</h3>
  <table>
