--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  </table>
 </div>
 
-  <canvas width="800" height="640"></canvas>
+  <canvas width="960%" height="600%"></canvas>
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/bullet.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
