--- a/index.html
+++ b/index.html
@@ -16,37 +16,44 @@
   <audio id="game-over"><source src="256091__soundeffectspodcast-com__game-over-voice-2b.wav" type="audio/wav" /></audio>
   
   <div class="game-container">
-    <!-- <div id="Board"> -->
+    
       <div id="highscores">
-        <div id="scoreboard">
-              Score: 00 
-        </div>
-      <table id="highscores-table">
-        <h2>Highscores:</h2>
-        <tr>
-          <th id="high-score-1-name"></th>
-          <th id="high-score-1-score"></th>
-        </tr>
-        <tr>
-          <th id="high-score-2-name"></th>
-          <th id="high-score-2-score"></th>
-      </tr>
-      <tr>
-        <th id="high-score-3-name"></th>
-        <th id="high-score-3-score"></th>
-      </tr>
-      <tr>
-        <th id="high-score-4-name"></th>
-        <th id="high-score-4-score"></th>
-      </tr>
-      <tr>
-        <th id="high-score-5-name"></th>
-        <th id="high-score-5-score"></th>
-      </tr>
-    </table>
+        <table id="highscores-table">
+          <h2>Highscores:</h2>
+          <tr>
+            <th id="high-score-1-name"></th>
+            <th id="high-score-1-score"></th>
+          </tr>
+          <tr>
+            <th id="high-score-2-name"></th>
+            <th id="high-score-2-score"></th>
+          </tr>
+          <tr>
+            <th id="high-score-3-name"></th>
+            <th id="high-score-3-score"></th>
+          </tr>
+          <tr>
+            <th id="high-score-4-name"></th>
+            <th id="high-score-4-score"></th>
+          </tr>
+          <tr>
+            <th id="high-score-5-name"></th>
+            <th id="high-score-5-score"></th>
+          </tr>
+        </table>
+      </div>
+
+
+  <canvas id="canvas"width="860" height="540">
+  </canvas>
+  
+  <div class=scoreboard>
+    <h2 id=scoreboard>
+      Score: 00
+    </h2>
   </div>
-    <canvas id="canvas"width="800" height="540">
-    </canvas>
+
+
 
   </div>
   <!-- </div> -->
